objects/Encounter_aggregates__c.object
<CustomObject>
    <fields>
        <fullName>CRM_SelectedPreferedHospitalCodes__c</fullName>
        <label>Selected Prefered Hospital Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Encounter aggregates</relationshipLabel>
        <relationshipName>Encounter_aggregates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Discharge_Date_Criteria_Element_Id__c</fullName>
        <label>Last Discharge Date Criteria Element Id</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Discharge_Date_From_UI__c</fullName>
        <label>Last Discharge Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Discharge_Date_Ranges__c</fullName>
        <label>Last Discharge Date Ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Discharge_Date_To_UI__c</fullName>
        <label>Last Discharge Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Primary_Payor_Type__c</fullName>
        <label>Most Recent Primary Payor Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHARITY</fullName>
                </value>
                <value>
                    <fullName>MANAGED CARE</fullName>
                </value>
                <value>
                    <fullName>MANAGED EXCHANGE</fullName>
                </value>
                <value>
                    <fullName>MEDICAID</fullName>
                </value>
                <value>
                    <fullName>MEDICAID MANAGED CARE</fullName>
                </value>
                <value>
                    <fullName>MEDICARE</fullName>
                </value>
                <value>
                    <fullName>MEDICARE MANAGED CARE</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>SELF PAY/UNINSURED</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_ER_Encounters_ranges__c</fullName>
        <label>No of ER Encounters ranges</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_ER_Encounters_To__c</fullName>
        <label>Number of ER Encounters To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_ER_Encounters__c</fullName>
        <label>Number of ER Encounters</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preffered_Hospital__c</fullName>
        <label>Preferred Hospital</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
                <value>
                    <fullName>Centennial Medical Center</fullName>
                    <label>Baylor/Tenet JV Region - Baylor Scott &amp; White Medical Center - Centennial</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wunderman_Preferred_Hospitals__c</fullName>
        <label>Wunderman Preferred Hospitals</label>
        <type>TextArea</type>
    </fields>
    <label>Encounter aggregates</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Encounter aggregates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encounter aggregates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>